# sdlx

./: CMakeLists.txt  README.md
src/: blend_mode.hpp  display_mode.cpp  display_mode.hpp  entry.hpp  error.cpp  error.hpp  init.cpp  init.hpp  init_flag.hpp  main.cpp  pixel_format.hpp  progress_state.hpp  renderer.cpp  renderer.hpp  resource_ref.hpp  sdl.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp  window_flag.hpp
src/internal/: enum.hpp
